<resources>
    <string name="app_name">CarShareApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_logout">Logout</string>
    <string name="action_pending_requests">Pending requests</string>
    <string name="car_location_question">Where is your car parked?</string>
    <string name="key_location_question">Where can borrowers find your keys?</string>
    <string name="hourly_rate_question">What hourly rate do you charge?</string>
    <string name="dollar">$</string>
    <string name="per_hour">/ hour</string>
    <string name="done">Done</string>
    <string name="remove_button">Remove</string>
    <string name="add_button">Add</string>
    <string name="title_activity_logged_in">LoggedIn</string>
    <string name="car_location">Current location of your car</string>
    <string name="key_location">Current location of your keys</string>
    <string name="update">Update</string>
    <string name="car_make">Car make</string>
    <string name="car_model">Car model</string>
    <string name="license_plate">License plate</string>
    <string name="car_transmission">Car transmission</string>
    <string name="hourly_rate">Hourly rate</string>
    <string name="action_approvedlist">Approved List</string>
    <string name="next">Next</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="no_pending_requests">You have no pending requests</string>
    <string name="dash">&#160;-&#160;</string>
    <string name="launch_venmo">Launch Venmo</string>
    <string name="returning">Returning&#160;</string>
    <string name="where_parked">Where did you park?</string>
    <string name="car_parked">Parked in</string>
    <string name="return_keys">Return the keys to</string>
    <string name="confirm">Confirm</string>
    <string name="thank">Thank&#160;</string>
    <string name="car_of">\'s Car</string>
    <string name="thank_you_message">&#160;for letting you borrow the car</string>

    <string-array name="transmission_choice_array">
        <item>Manual</item>
        <item>Automatic</item>
    </string-array>
    <string name="title_activity_borrower">BorrowerActivity</string>
    <string name="search_friends">Search friends</string>
    <string name="setAL_header">Add your friends who are allowed to borrow your car</string>
    <string name="hourly_rate_edit">Hourly Charge Rate</string>
</resources>
