<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Owner.OwnerActivity">

    <item android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_48dp"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_approvedlist"
        android:icon="@drawable/ic_list_white_48pt"
        android:title="@string/action_approvedlist"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>