<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/car_location"
        android:text="@string/car_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/car_location_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_location"/>

    <Button
        android:id="@+id/car_location_update"
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/car_location_edit"
        android:layout_alignBaseline="@id/car_location_edit" />

    <TextView
        android:id="@+id/key_location"
        android:text="@string/key_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_location_edit" />

    <EditText
        android:id="@+id/key_location_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/key_location" />

    <Button
        android:id="@+id/key_location_update"
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/key_location_edit"
        android:layout_alignBaseline="@id/key_location_edit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upcoming Requests"
        android:id="@+id/context"
        android:layout_marginTop="20dp"
        android:layout_below="@id/key_location_edit"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/context" >

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/requests_list" />

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>